--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^16.8.6",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^5.2.1",
     "react-images": "^1.1.0",
     "react-scrollspy": "^3.4.0",
