--- a/package.json
+++ b/package.json
@@ -12,16 +12,14 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "gatsby": "^4.2.0",
-    "gatsby-plugin-manifest": "^4.2.0",
+    "gatsby": "^5.15.0",
+    "gatsby-plugin-manifest": "^5.15.0",
     "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sass": "^5.2.0",
-    "node-sass": "^6.0.1",
-    "react": "^16.8.6",
+    "react": "^18.0.0",
     "react-bootstrap": "^2.2.1",
-    "react-dom": "^16.8.6",
-    "react-google-recaptcha": "^2.1.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^5.2.1",
     "react-images": "^1.1.0",
     "react-scrollspy": "^3.4.0",
@@ -40,7 +38,8 @@
   "devDependencies": {
     "gh-pages": "^3.2.3",
     "prettier": "^2.4.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "sass": "^1.93.3"
   },
   "keywords": [
     "gatsby",
