--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "bootstrap": "^5.1.3",
     "gatsby": "^5.15.0",
     "gatsby-plugin-manifest": "^5.15.0",
-    "gatsby-plugin-offline": "^5.2.0",
-    "gatsby-plugin-react-helmet": "^5.2.0",
-    "gatsby-plugin-sass": "^5.2.0",
+    "gatsby-plugin-offline": "^6.15.0",
+    "gatsby-plugin-react-helmet": "^6.15.0",
+    "gatsby-plugin-sass": "^6.15.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^18.0.0",
     "react-helmet": "^5.2.1",
-    "react-images": "^1.1.0",
     "react-scrollspy": "^3.4.0",
     "smoothscroll-polyfill": "^0.4.4",
-    "stream": "^0.0.3"
+    "stream": "^0.0.3",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "scripts": {
     "develop": "gatsby develop",
