--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "yet-another-react-lightbox": "^3.25.0"
   },
   "scripts": {
-    "develop": "gatsby develop",
-    "build": "npm run clean && gatsby build",
+     "develop": "gatsby develop",       
+    "build": "gatsby build",              
+    "serve": "gatsby serve",               
+    "clean": "gatsby clean",             
     "deploy": "npm run clean && gatsby build --prefix-paths && gh-pages -d public",
-    "serve": "gatsby serve",
-    "clean": "rimraf .cache public",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
